--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/rick_and_morty
+spring.datasource.username=root
+spring.datasource.password=D1234?
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+api.url=https://rickandmortyapi.com/api/character
+server.port=8081
+
 
